Fix scrollbar appearance on 100vh body height

--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,20 @@
     box-sizing: border-box;
 }
 
-body {
-    max-height: 100vh;
+:root, body {
     padding: 0;
     margin: 0;
 }
 
-#hero-img {
+#container {
+    display: flex;
+}
+
+#hero-container {
     height: 100vh;
+}
+
+#hero-img {
+    width: 400px;
+    height: 100%;
 }
